--- a/templates/index.html
+++ b/templates/index.html
@@ -339,7 +339,30 @@
         <div class="row">
             <div class="col-md-12">
                 <div style="padding:50px;">
-                    <h1 class="text-center">Have feedback?</h1><br>
+                    <h1 class="text-center">Sign-up for our newsletter!</h1><br>
+
+                    <!-- Begin Mailchimp Signup Form -->
+                    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                    <style type="text/css">
+                        #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+                        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                    </style>
+                    <div id="mc_embed_signup">
+                    <form action="https://corporatediversitydata.us7.list-manage.com/subscribe/post?u=626ff404eccc5deaf5cbda28c&amp;id=c66400ecf6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                        
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_626ff404eccc5deaf5cbda28c_c66400ecf6" tabindex="-1" value=""></div>
+                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="background-color:green"></div>
+                        </div>
+                    </form>
+                    </div>
+
+                    <!--End mc_embed_signup-->
+                    <br>
+                    <h3 class="text-center">Have feedback?</h1>
                     <h3 style="font-weight: lighter" class="text-center">Reach out to <a href="https://www.linkedin.com/in/maxmershon/" target="_blank">Max Mershon</a> (mershon.max16@gmail.com).</h3>
                 </div>
             </div>
@@ -362,6 +385,43 @@
     </div>
 </div>
 
+
+
+
+<!-- Modal -->
+<div class="modal" id="myModal">
+  <div class="modal-dialog" >
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h1 class="text-center">Sign-up for our newsletter!</h1><br>
+
+        <!-- Begin Mailchimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+        <form action="https://corporatediversitydata.us7.list-manage.com/subscribe/post?u=626ff404eccc5deaf5cbda28c&amp;id=c66400ecf6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+            
+            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_626ff404eccc5deaf5cbda28c_c66400ecf6" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="background-color:green"></div>
+            </div>
+        </form>
+        </div>
+
+        <!--End mc_embed_signup-->
+
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
 
 
@@ -380,6 +440,12 @@
       $('#custom').DataTable();
       $('.dataTables_length').addClass('bs-select');
     });
+
+//window.setTimeout(function() {
+//   $('#myModal').modal('show');
+//}, 5000)
+
+
 </script>
 
 {% endblock %}
